Exercícios – Parte 1: console.log, Variáveis, Strings

--- a/JS introducao/index.html
+++ b/JS introducao/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-        var nome = 'joao';
-        console.log("Hello World " + nome);
+    
+    <script src="exercicio-1.js">
+
     </script>
 </body>
 </html>
